update tmux for show prefix highlight and working dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,11 +86,10 @@ set -g status-position top
 set -g status-right-length 150
 
 wg_session="#[fg=$color_session_text] #S #[default]"
-wg_activated_gh_account="#(~/.config/tmux/.__activated_gh_account.sh)"
-wg_working_dir="#(~/.config/tmux/.__shorten_current_path.sh #{pane_current_path})"
+wg_working_dir="#{=|-24|…;s|$HOME|~|:pane_current_path}"
 
 set -g status-left "$wg_session"
-set -g status-right "#[fg=$color_secondary]$wg_activated_gh_account #[default]| #[fg=$color_working_dir]$wg_working_dir #[default]| CPU: #{cpu_fg_color}#{cpu_percentage} #[default]| RAM: #{ram_fg_color}#{ram_percentage}  "
+set -g status-right "#{prefix_highlight} #[default]| #[fg=$color_working_dir]$wg_working_dir #[default]| CPU: #{cpu_fg_color}#{cpu_percentage} #[default]| RAM: #{ram_fg_color}#{ram_percentage}"
 
 # Configure colors for tmux-cpu "CPU" and "MEM" widget
 set -g @cpu_low_fg_color "#[fg=$color_level_ok]"
