update tmux terminal color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@
 set -s escape-time 0
 
 # Colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
 # Mouse mode
 setw -g mouse on
