--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,9 @@ set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window 
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
+# reload tmux config
+bind ! source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config"
+
 # =====================================
 # ===           Theme               ===
 # =====================================
