--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 live_config_reload = true
 
 [colors]
@@ -7,17 +8,17 @@ draw_bold_text_with_bright_colors = false
 size = 15.0
 
 [font.bold]
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.italic]
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 
 [font.normal]
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 
 [font.offset]
 x = 0
